--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   width: calc(100% / 3 - 5rem);
   margin: 0;
-  padding: 0;
+  padding: 0.3rem;
   cursor: pointer;
 }
 
@@ -34,7 +34,7 @@
 .Gallery--Item > div {
   position: relative;
   width: 100%;
-  height: 25rem;
+  height: 15rem;
 }
 
 .Gallery--Item figcaption {
