--- a/src/components/PageSlider.css
+++ b/src/components/PageSlider.css
@@ -2,6 +2,7 @@
   background-color: var(--darkGrey);
   color: white;
   padding: 15rem 0;
+  overflow: hidden;
 }
 
 .PageSlider .BackgroundImage {
